[gd_scene load_steps=4 format=2]

[ext_resource path="res://EnnemySpawner.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -24, 24, 0, 0, 0, 0, -24, 128 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 440, 24, 0, 0, 0, 0, 440, 128 )
}

[node name="EnnemySpawner" type="Node"]
script = ExtResource( 1 )

[node name="LeftAerial" type="Path2D" parent="."]
self_modulate = Color( 1, 0.164706, 0, 0.701961 )
curve = SubResource( 1 )

[node name="LeftPathLocation" type="PathFollow2D" parent="LeftAerial"]
position = Vector2( -24, 24 )
rotation = 1.5708

[node name="RightAerial" type="Path2D" parent="."]
self_modulate = Color( 1, 0.0941176, 0, 0.701961 )
curve = SubResource( 2 )

[node name="RightPathLocation" type="PathFollow2D" parent="RightAerial"]
position = Vector2( 440, 24 )
rotation = 1.5708

[node name="LeftGround" type="Position2D" parent="."]
position = Vector2( -24, 176 )

[node name="RightGround" type="Position2D" parent="."]
position = Vector2( 440, 176 )

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
